k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: enneagram
  labels:
    app: enneagram
    team: 3035tech
