k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enneagram-app
  namespace: enneagram
spec:
  selector:
    app: enneagram-app
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
